# ULTSNOWER

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: BRIDGE_INTEGRATION.md  CENTRAL_BRIDGE_API.md  CENTRAL_BRIDGE_GAP_ANALYSIS.md  DESIGN.md  GOAL_PROMPT_CENTRAL_BRIDGE_LEGACY_CONSOLE.md  PROGRESS_AND_RELEASE_HARDENING.md  WHITEBOX_AUDIT_2026-06-01.md
merchant_portal_server/: __init__.py  __main__.py
src/merchant_portal_server/: __init__.py  app.py  bridge_client.py  config.py  db.py  security.py  service.py
src/merchant_portal_server/legacy/: customer.html  login.html  register.html
tests/: test_merchant_portal.py
tools/: run_seeded_bridge.py  seed_dev_merchant.py
