[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snow-merchant-portal-server"
version = "0.1.0"
description = "Independent SNOW merchant customer portal server MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "starlette>=0.37",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
snow-merchant-portal-server = "merchant_portal_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
